gateway-setup-files/jenkins-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system

  hostnames:
    - "jenkins.rakops.in"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: my-jenkins
          port: 8080
