gateway-setup-files/vault-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system

  hostnames:
    - "vault.rakops.in"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: vault
          port: 8200
